--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "imagex-webpack-plugin",
+  "name": "veimagex-webpack-plugin",
   "version": "0.0.1",
   "main": "dist/cjs.js",
+  "author": "mchao85@foxmail.com",
+  "engines": {
+    "node": ">= 10.13.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "cross-env NODE_ENV=production babel src -d dist --copy-files"
   },
   "dependencies": {
-    "loader-utils": "^2.0.0",
-    "vcloud-sdk-nodejs": "^1.3.13"
+    "@volcengine/openapi": "^1.1.1",
+    "loader-utils": "^2.0.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.2",
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5"
+    "@babel/preset-env": "^7.11.5",
+    "cross-env": "^7.0.2",
+    "tslib": "^2.3.1"
   }
 }
